--- a/client/package.json
+++ b/client/package.json
@@ -17,7 +17,7 @@
     "react-bootstrap": "^1.6.0",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.1",
+    "react-scripts": "^4.0.3",
     "socket.io-client": "^4.0.2",
     "ursa-purejs": "^0.0.3",
     "uuid": "^8.3.2",
